# try_sigsafe

./: CMakeLists.txt  LICENSE  README.md  test.cpp  test_c.c
try_sigsafe/: CMakeLists.txt  try_sigsafe.c  try_sigsafe.h
try_sigsafe_pp/: CMakeLists.txt  try_sigsafe_pp.cpp  try_sigsafe_pp.h
